# copykat

./: .gitignore  README.md  SKILL.md  install.sh  pyproject.toml  theme.yaml
copykat/: __init__.py  __main__.py  cli.py  sockets.py
copykat/commands/: __init__.py  listen.py  record.py  stop.py  viewer.py
copykat/recorder/: __init__.py  icon.py  parser.py  proxy.py  server.py
copykat/viewer/: __init__.py  app.py  discovery.py  format.py  theme.py
copykat/watcher/: __init__.py  inbox.py
