[project]
name = "copykat"
version = "0.1.0"
description = "Record a terminal's PTY output to an in-memory ring buffer and push selected recordings to an AI agent's inbox over a Unix socket, with a Textual viewer."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Javier Montes", email = "javimh@protonmail.com" }]
keywords = ["terminal", "pty", "recorder", "textual", "claude-code", "agent", "skill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Terminals",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["textual>=0.50", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://gitlab.com/javimh/copykat"
Source = "https://gitlab.com/javimh/copykat"
Issues = "https://gitlab.com/javimh/copykat/-/issues"

[project.scripts]
copykat = "copykat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["copykat"]
